cluster/apps/default/gitness/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: gitness
  namespace: default
  labels:
    app: gitness
spec:
  selector:
    app: gitness
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
